--- a/.gitignore
+++ b/.gitignore
@@ -234,3 +234,5 @@ buildNumber.properties
 .history
 
 # End of https://www.gitignore.io/api/git,java,maven,eclipse,sonarqube,intellij+all,visualstudiocode
+
+.asciidoctor/
