--- a/bluesky-boot-docs/pom.xml
+++ b/bluesky-boot-docs/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>spring-restdocs-mockmvc</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.epages</groupId>
+			<artifactId>restdocs-api-spec-mockmvc</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>io.github.luversof</groupId>
