--- a/bluesky-boot/pom.xml
+++ b/bluesky-boot/pom.xml
@@ -41,5 +41,10 @@
 		</dependency>
 		<!-- (e) reactive web -->
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
