--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -11,8 +11,8 @@
 	</parent>
 	<properties>
 		<java.version>17</java.version>
-		<spring-boot.version>2.7.4</spring-boot.version>
-		<spring-cloud.version>2021.0.4</spring-cloud.version>
+		<spring-boot.version>3.0.0</spring-boot.version>
+		<spring-cloud.version>2022.0.0-RC3</spring-cloud.version>
 		<bluesky-boot.version>0.0.1-SNAPSHOT</bluesky-boot.version>
 		<bluesky-boot-autoconfigure-devcheck.version>2.0.1-SNAPSHOT</bluesky-boot-autoconfigure-devcheck.version>
 		<spring-boot-admin-starter.version>2.7.4</spring-boot-admin-starter.version>
