--- a/bluesky-boot-autoconfigure/pom.xml
+++ b/bluesky-boot-autoconfigure/pom.xml
@@ -56,11 +56,11 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<optional>true</optional>
 		</dependency>
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<optional>true</optional>
-		</dependency>-->
+		</dependency>
 		<!-- (e) cloud -->
 
 		<!-- (s) batch -->
