--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -354,7 +354,7 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>properties-maven-plugin</artifactId>
-					<version>${properties-maven-plugin}</version>
+					<version>${properties-maven-plugin.version}</version>
 					<configuration>
 						<outputFile>
                 			build.properties
