spring-boot-maven-plugin build-info goal 설정 추가
kubernetes discovery all namespace 설정 추가

--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -68,6 +68,8 @@ spring:
   cloud:
     config:
       uri: http://bluesky-cloud-config-server-service.default:30101
+    kubernetes.discovery:
+      all-namespaces: true
   boot:
     admin:
       client:
