--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -185,6 +185,25 @@
 		</resources>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<executions>
+						<execution>
+							<goals>
+								<goal>build-info</goal>
+							</goals>
+							<configuration>
+								<additionalProperties>
+									<encoding.source>UTF-8</encoding.source>
+									<encoding.reporting>UTF-8</encoding.reporting>
+									<java.source>${maven.compiler.source}</java.source>
+									<java.target>${maven.compiler.target}</java.target>
+								</additionalProperties>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
 				<!-- (s) sonarqube plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugin</groupId>
