management.endpoint.env.show-values always 설정 추가

--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -13,6 +13,8 @@ management:
     health:
       show-details: always
       probes.enabled: true
+    env:
+      show-values: always
   endpoints.web.exposure.include: "*"
 eureka:
   instance:
