--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -36,7 +36,7 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     service-url:
-      defaultZone: http://eureka.cloud.bluesky.local/eureka/,http://localhost:30100/eureka/
+      defaultZone: http://eureka.cloud.bluesky.local/eureka/
 ---
 spring:
   config.activate.on-profile: dockerdev
@@ -66,7 +66,6 @@ spring:
       client:
         url: http://bluesky-cloud-admin-server-service.default.svc.cluster.local:30102
 eureka:
-  instance:
-    prefer-ip-address: true  client:
+  client:
     service-url:
-      defaultZone: http://bluesky-cloud-netflix-eureka-server-service.default.svc.cluster.local:30100/eureka/,http://eureka.cloud.bluesky.local/eureka/
+      defaultZone: http://bluesky-cloud-netflix-eureka-server-service.default.svc.cluster.local:30100/eureka/
