--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -35,8 +35,8 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
-    service-url:
-      defaultZone: http://eureka.cloud.bluesky.local/eureka
+    serviceUrl:
+      defaultZone: http://eureka.cloud.bluesky.local/eureka/
 ---
 spring:
   config.activate.on-profile: dockerdev
@@ -49,7 +49,7 @@ spring:
         url: http://admin-server:30102
 eureka:
   client:
-    service-url:
+    serviceUrl:
       defaultZone: http://netflix-eureka-server:30100/eureka
 #  instance:
 #    ip-address: 10.0.75.1
@@ -67,5 +67,5 @@ spring:
         url: http://bluesky-cloud-admin-server-service.default.svc.cluster.local:30102
 eureka:
   client:
-    service-url:
-      defaultZone: http://bluesky-cloud-netflix-eureka-server-service.default.svc.cluster.local:30100/eureka
+    serviceUrl:
+      defaultZone: http://bluesky-cloud-netflix-eureka-server-service.default.svc.cluster.local:30100/eureka/
