bootstrap.yml eureka instance hostname 설정 추가

--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -66,6 +66,8 @@ spring:
       client:
         url: http://bluesky-cloud-admin-server-service.default.svc.cluster.local:30102
 eureka:
+  instance:
+    hostname: ${spring.application.name}-service.default.svc.cluster.local
   client:
     serviceUrl:
       defaultZone: http://bluesky-cloud-netflix-eureka-server-service.default.svc.cluster.local:30100/eureka/
