bootstrap.yml kubernetes discovery service-labels 설정 추가

--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -64,6 +64,8 @@ spring:
         mode: SERVICE
       discovery:
         all-namespaces: true
+        service-labels:
+          spring-boot: true
   boot:
     admin:
       client:
