spring.cloud.kubernetes.loadbalancer.mode SERVICE 설정

--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -61,8 +61,8 @@ spring:
     config:
       uri: http://bluesky-cloud-config-server-service.default.svc.cluster.local:30101
     kubernetes:
-#      loadbalancer:
-#        mode: SERVICE
+      loadbalancer:
+        mode: SERVICE
       discovery:
         all-namespaces: true
         service-labels:
