spring.boot.admin.instance name, service-host-type 설정

--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -71,6 +71,9 @@ spring:
     admin:
       client:
         url: http://bluesky-cloud-admin-server-service.default.svc.cluster.local:30102
+        instance:
+          name: ${spring.application.name}-service
+          service-host-type: ip
 eureka:
   instance:
     prefer-ip-address: true
