--- a/bluesky-boot-docs/pom.xml
+++ b/bluesky-boot-docs/pom.xml
@@ -23,11 +23,6 @@
 		</dependency>
 		<dependency>
 			<groupId>io.github.luversof</groupId>
-			<artifactId>bluesky-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.github.luversof</groupId>
 			<artifactId>bluesky-boot-test-autoconfigure</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -44,6 +39,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+		
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
