--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -1,13 +1,3 @@
-spring:
-  cloud:
-    inetutils:
-      ignored-interfaces:
-        - docker0
-        - veth.*
-      preferred-networks:
-        - 192.168
-        - 10.0
-
 management:
   endpoint:
     health:
@@ -26,8 +16,8 @@ spring:
   cloud:
     config:
       uri: http://config.cloud.bluesky.local/
-    discovery:
-      enabled: false
+#    discovery:
+#      enabled: false
   boot:
     admin:
       client:
@@ -36,13 +26,20 @@ spring:
 eureka:
   client:
     registerWithEureka: false
-    fetchRegistry: false
+#    fetchRegistry: false
     serviceUrl:
-      defaultZone: http://eureka.cloud.bluesky.local/eureka/
+      defaultZone: http://eureka1.cloud.bluesky.local/eureka/
 ---
 spring:
   config.activate.on-profile: dockerdev
   cloud:
+    inetutils:
+      ignored-interfaces:
+        - docker0
+        - veth.*
+      preferred-networks:
+        - 192.168
+        - 10.0
     config:
       uri: http://config-server:30101
   boot:
