--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -1,4 +1,11 @@
 management:
+  info:
+    env:
+      enabled: true
+    java:
+      enabled: true
+    os:
+      enabled: true
   endpoint:
     health:
       show-details: always
@@ -7,6 +14,7 @@ management:
     env:
       show-values: always
   endpoints.web.exposure.include: "*"
+
 #eureka:
 #  instance:
 #    instance-id: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
