--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -190,10 +190,7 @@
 							</goals>
 							<configuration>
 								<additionalProperties>
-									<encoding.source>UTF-8</encoding.source>
-									<encoding.reporting>UTF-8</encoding.reporting>
-									<java.source>${maven.compiler.source}</java.source>
-									<java.target>${maven.compiler.target}</java.target>
+									<buildNumber>${build.number}</buildNumber>
 								</additionalProperties>
 							</configuration>
 						</execution>
