--- a/bluesky-boot-autoconfigure/pom.xml
+++ b/bluesky-boot-autoconfigure/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>io.github.luversof</groupId>
@@ -201,7 +199,7 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) kafka -->
-		
+
 		<!-- (s) validation -->
 		<dependency>
 			<groupId>jakarta.validation</groupId>
@@ -209,5 +207,12 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) validation -->
+
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-access</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
