tracing disabled 설정

--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -15,7 +15,9 @@ management:
       show-values: always
     configprops.show-values: always
   endpoints.web.exposure.include: '*'
-  tracing.sampling.probability: 1.0
+  tracing:
+    enabled: false
+#    sampling.probability: 1.0
   
 
 logging.pattern.level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
