jib-maven-plugin configuration container creationTime 설정 추가

--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -326,6 +326,9 @@
 						</execution>
 					</executions>
 					<configuration>
+						<container>
+							<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
+						</container>
 						<from>
 							<image>openjdk:17-slim</image>
 						</from>
