--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -11,25 +11,25 @@
 	</parent>
 	<properties>
 		<java.version>17</java.version>
-		<spring-boot.version>3.0.5</spring-boot.version>
+		<spring-boot.version>3.0.6</spring-boot.version>
 		<spring-cloud.version>2022.0.2</spring-cloud.version>
 		<bluesky-boot.version>0.0.1-SNAPSHOT</bluesky-boot.version>
 		<bluesky-boot-autoconfigure-devcheck.version>3.0.0-SNAPSHOT</bluesky-boot-autoconfigure-devcheck.version>
 		<spring-boot-admin-starter.version>3.0.2</spring-boot-admin-starter.version>
-		<springdoc-openapi.version>2.0.4</springdoc-openapi.version>
+		<springdoc-openapi.version>2.1.0</springdoc-openapi.version>
 		<!-- tag:asciidoctor-properties[] -->
 		<download-maven-plugin.version>1.6.8</download-maven-plugin.version>
 		<asciidoctor-maven-plugin.version>2.2.3</asciidoctor-maven-plugin.version>
-		<asciidoctorj-diagram.version>2.2.4</asciidoctorj-diagram.version>
+		<asciidoctorj-diagram.version>2.2.7</asciidoctorj-diagram.version>
 		<refdocs.build.directory>${project.build.directory}/refdocs/</refdocs.build.directory>
 		<asciidoctor.outputDirectory>${project.build.directory}/generated-docs</asciidoctor.outputDirectory>
 		<asciidoctor.preserveDirectories>true</asciidoctor.preserveDirectories>
 		<asciidoctor.doctype>book</asciidoctor.doctype>
-		<restdocs-api-spec.version>0.17.1</restdocs-api-spec.version>
-		<restdocs-spec-maven-plugin.version>0.21</restdocs-spec-maven-plugin.version>
+		<restdocs-api-spec.version>0.18.0</restdocs-api-spec.version>
+		<restdocs-spec-maven-plugin.version>0.22</restdocs-spec-maven-plugin.version>
 		<spring-asciidoctor-backends.version>0.0.5</spring-asciidoctor-backends.version>
 		<!-- end:asciidoctor-properties[] -->
-		<jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
+		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
 		<jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
 		<properties-maven-plugin.version>1.1.0</properties-maven-plugin.version>
 		<filecopy-maven-plugin.version>1.0.2</filecopy-maven-plugin.version>
@@ -290,7 +290,7 @@
 							<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
 						</container>
 						<from>
-							<image>openjdk:17-slim</image>
+							<image>eclipse-temurin:17-jre-alpine</image>
 						</from>
 						<to>
 							<image>${build.image}/${project.artifactId}</image>
