mybatis 3.0.0 -> 3.0.1, zipkin 설정 활성화

--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -16,8 +16,8 @@ management:
     configprops.show-values: always
   endpoints.web.exposure.include: '*'
   tracing:
-    enabled: false
-#    sampling.probability: 1.0
+    enabled: true
+    sampling.probability: 0.1
   
 
 logging.pattern.level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
