--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -16,8 +16,9 @@ management:
     configprops.show-values: always
   endpoints.web.exposure.include: '*'
   tracing:
-    enabled: true
-    sampling.probability: 0.1
+    enabled: false
+#    sampling.probability: 1.0
+  
 
 logging.pattern.level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
 #eureka:
