--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -163,7 +163,7 @@
 				</plugin>
 				<!-- (s) sonarqube plugin -->
 				<plugin>
-					<groupId>org.apache.maven.plugin</groupId>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${maven-surefire-plugin.version}</version>
 					<configuration>
